core/src/div/div.module.scss
@import "../theme/module.scss";

.line {
	border-top: solid 1px transparent;
	border-left: solid 1px transparent;
	@include light {
		border-color: var(--light-gray-3);
	}
	@include dark {
		border-color: var(--dark-gray-0);
	}
}

$sizes: 4 8 16 24 32 48 64 96;

@each $size in $sizes {
	.px#{$size} {
		// we use <span> so it works everywhere semantically but visually we
		// need the stability and solid of block display
		display: block;
		flex: 0 0 auto;
		height: #{$size}px;
		width: #{$size}px;
	}
}

.grow {
	display: block;
	flex: 1 0 0px;
}

